Fixed integration test for cdb_list.

--- a/api/test/integration/test_cdb_list_endpoints.tavern.yaml
+++ b/api/test/integration/test_cdb_list_endpoints.tavern.yaml
@@ -669,7 +669,7 @@ stages:
       method: PUT
       data: "{new_cdb_list:s}"
       params:
-        relative_dirname: 'amazon'
+        relative_dirname: '/amazon'
       headers:
         Authorization: "Bearer {test_login_token}"
     response:
