--- a/ruleset/sca/sles/15/cis_sles15_linux.yml
+++ b/ruleset/sca/sles/15/cis_sles15_linux.yml
@@ -3117,7 +3117,7 @@ checks:
       - soc_2: ["CC7.1", "CC8.1"]
     condition: all
     rules:
-      - 'c:sshd -T -> n:ClientAliveInterval\s*\t*(\d+) compare > 0'
+      - 'c:sshd -T -> n:ClientAliveInterval\s*\t*(\d+) compare >= 1'
       - 'c:sshd -T -> n:ClientAliveInterval\s*\t*(\d+) compare <= 300'
       - 'c:sshd -T -> n:clientalivecountmax\s*\t*(\d+) compare >= 1'
       - 'c:sshd -T -> n:clientalivecountmax\s*\t*(\d+) compare <= 3'
@@ -3565,7 +3565,7 @@ checks:
       - soc_2: ["CC5.2", "CC6.1"]
     condition: all
     rules:
-      - 'c:stat -Lc "%n %a %u %U %g %G" /etc/shadow -> r:0 root (\d+) shadow && r:644|640|604|600|400|500'
+      - 'c:stat -Lc "%n %a %u %U %g %G" /etc/shadow- -> r:0 root (\d+) shadow && r:644|640|604|600|400|500'
 
   # 6.1.7 Ensure permissions on /etc/group- are configured. (Automated)
   - id: 21164
