--- a/.gitignore
+++ b/.gitignore
@@ -159,4 +159,5 @@ src/wazuh_modules/vulnerability_detector/msu.json.gz
 # Flatbuffers generated headers.
 src/shared_modules/utils/flatbuffers/include/
 src/wazuh_modules/syscollector/include/
-src/wazuh_modules/vulnerability_scanner/include/
+src/wazuh_modules/vulnerability_scanner/include/*_schema.h
+src/wazuh_modules/vulnerability_scanner/include/*_generated.h
