--- a/ruleset/sca/ubuntu/cis_ubuntu20-04.yml
+++ b/ruleset/sca/ubuntu/cis_ubuntu20-04.yml
@@ -2717,9 +2717,9 @@ checks:
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
       - pci_dss_v4.0: ["1.3.1", "7.1"]
       - soc_2: ["CC5.2", "CC6.1"]
-    condition: all
+    condition: none
     rules:
-      - 'c:sh -c "find /etc/ssh -xdev -type f -name ''ssh_host_*_key.pub'' -exec stat {} \;" -> r:Access:\s*\( && !r:-rw-r--r--'
+      - 'c:find /etc/ssh -xdev -type f -name "ssh_host_*_key.pub" -exec stat -c "%u %U %g %G %a" {} + -> r:\d+ && !r:0 root 0 root 644'
 
   # 4.2.4 Ensure SSH access is limited. (Automated)
   - id: 19111
